Rewrite Java Foundation curriculum and fix core encoding flow bugs
Java content:
- Replace 38 legacy chunk-*.json files with 8 focused Foundation modules
  (java-fnd-1 through java-fnd-8) covering Syntax, Control Flow, OOP,
  Memory, Collections, Exceptions, I/O, and Generics
- Each module has 2 lessons, 4+ retrieval questions, guided + solo practice
  with genuinely distinct scenarios per lesson, and Archmage Eldrin story beats
- Fix JSON content bugs: stale field names (avatarEmoji→av, cssClass→cls,
  content→text), prerequisiteIds alias, test format (expected/input), and
  deprecated finalize() replaced with AutoCloseable/try-with-resources

Encoding engine fixes:
- Guard advancePhase() against bypassing GUIDED_PRACTICE, SOLO_PRACTICE, and
  RETRIEVAL_CHECK without a passing submission (BUG-4)
- Add guidedPracticePassed / soloPracticePassed flags to UserChunkProgress so
  the gate persists across requests
- Seed spaced-repetition schedule for lessons with no retrieval questions so
  memory strength doesn't stay at 0% (BUG-13)
- Auto-advance UserLearnerProfile.currentPath when a full tier completes so
  the topic map shows the correct tier placement (BUG-12)

Stale content pruning:
- JsonContentSeeder now tracks which chunk IDs it loads per (topicId, tier)
  and deletes any DB chunks in that tier not present in the JSON files;
  only prunes tiers that have JSON coverage, leaving unmigrated tiers intact
- Add deleteBySubChunkIdIn to UserChunkProgressRepository for cascade cleanup

Admin / UX polish:
- Content health check no longer false-flags NONE-type lessons for missing
  guided practice; each health item now shows topic and tier badges
- Rename user-visible labels: Chunk → Module, SubChunk → Lesson (admin pages
  and breadcrumbs); learner views already used "concepts" — unchanged
- ChunkContentDto accepts both prerequisiteIds and prerequisites JSON keys

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>