@@ -22,8 +22,13 @@ public class RetrievalService {
     private final TelemetryService telemetry;
 
     /**
-     * Generate a retrieval check for a sub-chunk: 3-5 questions distributed by tier.
-     * Tier distribution: ~20% Recall, ~50% Application, ~30% Discrimination
+     * Generate a retrieval check for a sub-chunk: exactly 4 randomly selected questions.
+     *
+     * <p>Target distribution: 1 RECALL + 2 APPLICATION + 1 DISCRIMINATION. Each tier's
+     * question pool is independently shuffled before selection, so repeated calls to this
+     * method return a different set whenever the pool is larger than the quota. If a tier
+     * has fewer questions than its quota, the remaining slots are filled from the other
+     * tiers to always return exactly 4 questions (or as many as exist in the pool).</p>
      */
     public List<Question> generateRetrievalCheck(String userId, String subChunkId) {
         LearnerPath path = getPath(userId);
@@ -31,25 +36,36 @@ public class RetrievalService {
                 .filter(q -> q.getMinPath().ordinal() <= path.ordinal())
                 .collect(Collectors.toList());
 
-        List<Question> recall = pool.stream().filter(q -> q.getTier() == QuestionTier.RECALL).collect(Collectors.toList());
-        List<Question> application = pool.stream().filter(q -> q.getTier() == QuestionTier.APPLICATION).collect(Collectors.toList());
-        List<Question> discrimination = pool.stream().filter(q -> q.getTier() == QuestionTier.DISCRIMINATION).collect(Collectors.toList());
+        // Partition by tier and shuffle each bucket independently for true randomisation
+        List<Question> recall        = new ArrayList<>(pool.stream().filter(q -> q.getTier() == QuestionTier.RECALL).toList());
+        List<Question> application   = new ArrayList<>(pool.stream().filter(q -> q.getTier() == QuestionTier.APPLICATION).toList());
+        List<Question> discrimination = new ArrayList<>(pool.stream().filter(q -> q.getTier() == QuestionTier.DISCRIMINATION).toList());
 
         Collections.shuffle(recall);
         Collections.shuffle(application);
         Collections.shuffle(discrimination);
 
+        // Quotas: 1 RECALL, 2 APPLICATION, 1 DISCRIMINATION
         List<Question> selected = new ArrayList<>();
-        // 1 recall, 2 application, 1 discrimination (4 questions minimum)
-        if (!recall.isEmpty()) selected.add(recall.getFirst());
+        selected.addAll(recall.stream().limit(1).toList());
         selected.addAll(application.stream().limit(2).toList());
-        if (!discrimination.isEmpty()) selected.add(discrimination.getFirst());
+        selected.addAll(discrimination.stream().limit(1).toList());
 
-        // Add one more if we have extras
-        if (application.size() > 2) selected.add(application.get(2));
+        // Fill up to 4 from any remaining unseen questions if a tier was short
+        if (selected.size() < 4) {
+            Set<String> usedIds = selected.stream().map(Question::getId).collect(Collectors.toSet());
+            List<Question> overflow = new ArrayList<>(pool.stream()
+                    .filter(q -> !usedIds.contains(q.getId()))
+                    .toList());
+            Collections.shuffle(overflow);
+            int needed = 4 - selected.size();
+            selected.addAll(overflow.stream().limit(needed).toList());
+        }
 
+        // Present questions in a random order
         Collections.shuffle(selected);
-        log.info("[Retrieval] Generated {} questions for subChunk={} user={}", selected.size(), subChunkId, userId);
+        log.info("[Retrieval] Generated {} questions for subChunk={} user={} (pool: {} recall, {} application, {} discrimination)",
+                selected.size(), subChunkId, userId, recall.size(), application.size(), discrimination.size());
         return selected;
     }
 
